2002-07-30  Rune Zedeler <rune@zedeler.dk>

	* ly/engraver-init.ly: add alias "Current" to all contexts.

	* ly/property-init.ly: Use "Current" context in the accidental
	macros. TODO: Do the same in some of the other macros?
	
2002-07-30  Han-Wen  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (parse_handler): add better error message,
	return a sensible number of nchars

2002-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): catch GUILE errors
	when parsing, and emit useful warning message.

	* lily/lily-guile.cc (ly_parse_scm): add line/col/file locations
	to SCM port for parser.

2002-07-28  Rune Zedeler <rune@zedeler.dk>
	
	* lily/note-spacing.cc (stem_dir_correction) Add property
	knee_spacing_correction controlling the amount of optical spacing
	added to knees.
	
2002-07-28  Glen Prideaux  <gprideau@odyssey.apana.org.au>
       
       * lily/syllable-group.cc (set_lyric_align): Only fiddle with
       alignment if a note has more than a single lyric so single stanza
       songs are aligned correctly.

2002-07-28  Han-Wen  <hanwen@cs.uu.nl>

	* input/test/broken-spanner-adjustment.ly: new file.

2002-07-27  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/lilypond-book.py: Handle printfilename also together
	with {small,}verbatim

2002-07-27  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/output-lib.scm, lily/note-head.cc: fixed broken baroque
	note-head style by setting grob property font-family
	automatically.

2002-07-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* VERSION: 1.5.70 released.
	
	* Documentation/user/lilypond-book.itely (Insert music snippets
	into your texts using lilypond-book): Briefly mention HTML
	documents.  Started rewrite, but lost inspiration.

	* lily/grob-scheme.cc (get_original, get_system, get_broken_into):
	Move scheme funcs from grob.cc and spanner.cc.

	* lily, flower: Ran buildscripts/ontgaar.py.  See also
	http://lilypond.org/wiki/?CodingStandards.
	